tests/snapshots/options__opt_disabled-2.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d                                                                             "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"  4/4                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
