tests/snapshots/options__opt_disabled.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d                                                                             "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (2, 23)
