tests/snapshots/options__opt_disabled@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\", \"d\"]\noptions: --disabled"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d                                                                             "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"  4/4                                                                        0/0"
">                                                                               "
cursor: (24, 3)
