tests/snapshots/options__opt_disabled@002.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\", \"d\"]\noptions: --disabled\nafter:\n  @char 'b'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d                                                                             "
"  c                                                                             "
"  b                                                                             "
"> a                                                                             "
"  4/4                                                                        0/0"
"> b                                                                             "
cursor: (24, 4)
