tests/snapshots/options__opt_ellipsis.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                │a                                                              "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"> %%%fggghiij%%%│                                                               "
"  1/1        0/0│                                                               "
"> ij            │                                                               "
cursor: (24, 5)
