tests/snapshots/options__opt_ellipsis@001.snap
---
source: tests/options.rs
description: "input: items [\"aabbccddeeffggghiijjkkllmmnnooppqqrrssttuuvvwwxxyyzz\"]\noptions: --preview echo a --preview-window right:80% -q ij --ellipsis %%%"
---
"                │a                                                              "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"                │                                                               "
"> %%%fggghiij%%%│                                                               "
"  1/1        0/0│                                                               "
"> ij            │                                                               "
cursor: (24, 5)
