tests/snapshots/options__opt_exit_0_enter@001.snap
---
source: tests/options.rs
description: "input: items [\"1\", \"2\", \"3\"]\noptions: -q 1 --exit-0"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> 1                                                                             "
"  1/3                                                                        0/0"
"> 1                                                                             "
cursor: (24, 4)
